# CppGen

./: CMakeLists.txt  CMakeSettings.json  CMakeUtils.cmake  main.cpp  output.cpp  output.h
core/: CMakeLists.txt
core/include/: JCGenCore.h
core/source/: JCGenCore.cpp
formats/: CMakeLists.txt
formats/lua/: CMakeLists.txt
formats/lua/include/: JCGenLua.h
formats/lua/source/: JCGenLua.cpp
formats/xml/: CMakeLists.txt
formats/xml/include/: JCGenXML.h
formats/xml/source/: JCGenXML.cpp
include/: CppGen.h
lib/: CMakeLists.txt
source/: CppGen.cpp
source/Generate/: CMakeLists.txt  GenSpec.h  SerialFormat.cpp  SerialFormat.h
source/Generate/Formats/: CMakeLists.txt  LuaFormat.cpp  LuaFormat.h
source/Parse/: CMakeLists.txt  LuaParse.cpp  LuaParse.h  XMLParse.cpp  XMLParse.h
source/Spec/: CMakeLists.txt  Type.cpp  Type.h
source/Util/: CMakeLists.txt  Format.h
tests/: CMakeLists.txt
tests/parse/: CMakeLists.txt  input.xml  output.cpp  output.h  test.cpp
tests/parse_lua/: CMakeLists.txt  input.lua  output.cpp  output.h  test.cpp
